--- a/src/components/page-blocks/_footer.html
+++ b/src/components/page-blocks/_footer.html
@@ -1,1 +1,18 @@
-<footer class="footer"></footer>
+<footer class="footer footer--slider">
+    <div class="wrapper">
+        <div class="footer__name">Ольга Фадеева</div>
+        <ul class="footer__socials">
+            <li class="footer__socials-item"><a href="https://vk.com/fadeevaevent" target="_blank">
+                <svg><use xlink:href="img/sprite.svg#sprite--icon-vk"></use></svg>
+            </a></li>
+            <li class="footer__socials-item"><a href="https://ok.ru/olgafadeeva.art" target="_blank">
+                <svg><use xlink:href="img/sprite.svg#sprite--icon-odnoklassniki"></use></svg>
+            </a></li>
+            <li class="footer__socials-item"><a href="https://www.instagram.com/fadeeva_event" target="_blank">
+                <svg><use xlink:href="img/sprite.svg#sprite--icon-instagram"></use></svg>
+            </a></li>
+        </ul>
+        <a class="footer__email" href="malto:fadeeva_event@mail.ru">fadeeva_event@mail.ru</a>
+        <a class="footer__callback" href="tel:+79655155092">+7 (965) 515-50-92</a>
+    </div>
+</footer>
