--- a/src/scss/base/_first-screen.scss
+++ b/src/scss/base/_first-screen.scss
@@ -10,10 +10,12 @@
     margin-top: 12vh;
 
     & .header__button {
-        font-size: 1.8vw;
-        padding: 1.5vw 5vw 1.6vw;
-        margin: 5vh 0 0 6vw;
-        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 0s;
+        font-size: 1.6vw;
+        padding: 1.4vw 3vw 1.3vw;
+        margin: 5vh 0 0 8vw;
+        opacity: 0;
+        transform: scale(0);
+        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 3s;
     }
 }
 
@@ -25,10 +27,20 @@
         display: block;
         color: $prime-color;
         margin-left: 3vw;
+        transform: translateX(100%);
+        opacity: 0;
+        transition: 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) 1.5s;
+    }
+
+    & .top {
+        display: block;
+        transform: translateX(-100%);
+        opacity: 0;
+        transition: 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) 1s;
     }
 }
 
-.rirst-screen__slogan {
+.first-screen__slogan {
     position: absolute;
     top: 150px;
     left: 23vw;
@@ -38,4 +50,27 @@
     padding-left: 28px;
     margin-left: 28px;
     border-left: 6px solid #E5E5E5;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) 2s;
+}
+
+//Animation
+.first-screen.swiper-slide-active {
+    & .first-screen__title .top,
+    & .first-screen__title .bottom {
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+    
+    & .first-screen__slogan {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    & .header__button {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
