--- a/src/scss/base/_forth.scss
+++ b/src/scss/base/_forth.scss
@@ -28,6 +28,16 @@
     padding-right: 10vh;
     position: relative;
 
+    &.new::before {
+        content: '';
+        width: 15vh;
+        height: 15vh;
+        position: absolute;
+        bottom: -2vh;
+        left: -13vh;
+        background: url('../img/new.svg') no-repeat center/contain;
+    }
+
     &::after {
         content: '';
         width: 10vh;
@@ -71,8 +81,7 @@
     transform: translate(-50%, -50%) scale(0);
     box-shadow: inset 0px 7px 11px -4px rgba(255, 255, 255, 0.5), inset 0px 98px 100px -48px rgba(100, 71, 7, 0.3), inset 0px 1px 40px rgba(251, 173, 3, 0.3);
     padding: 3vh;
-    
-    transition: ease-in;
+    transition: 0.3s ease-in;
 
     &::before {
         content: "";
@@ -86,7 +95,8 @@
         right: 0;
         bottom: 0;
         box-shadow: inset 0 0 0 3000px rgba(0, 0, 0, 0.45);        
-        filter: blur(10px);        border-radius: 25px;
+        filter: blur(10px);        
+        border-radius: 25px;
     }
 
     &.show {
