--- a/src/scss/base/_02_variables.scss
+++ b/src/scss/base/_02_variables.scss
@@ -75,3 +75,13 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0 auto;
   height: 100%;
 }
+
+@media (min-width: 2000px) {
+  body {
+    font-size: 1vw;
+  }
+  .wrapper {
+    max-width: 80%;
+    padding: 6vw 30px 0;
+  }
+}
