--- a/src/scss/base/_03_slider.scss
+++ b/src/scss/base/_03_slider.scss
@@ -15,9 +15,9 @@ body {
 
   & .swiper-button-next,
   & .swiper-button-prev {
-    width: 100px;
-    height: 100px;
-    background:  #281E09 url('../img/arrow.svg') no-repeat center;
+    width: 5vw;
+    height: 5vw;
+    background:  #281E09 url('../img/arrow.svg') no-repeat center/ 70%;
     box-shadow: 3px 4px 20px 2px rgba(229, 229, 229, 0.31);
     border-radius: 0px 25px 0px 0px;
     position: absolute;
@@ -54,7 +54,7 @@ body {
 
   & .swiper-button-prev {
     top: auto;
-    bottom: 100px;
+    bottom: 5vw;
   }
 
   .swiper-button-next.swiper-button-disabled ~ .swiper-button-prev {
