--- a/src/scss/base/_button.scss
+++ b/src/scss/base/_button.scss
@@ -21,3 +21,10 @@
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
+
+@media (min-width: 2000px) {
+  .button {
+    font-size: 1vw;
+    padding: 0.8vw 1.2vw 0.7vw;
+  }
+}
