--- a/src/scss/base/_first-screen.scss
+++ b/src/scss/base/_first-screen.scss
@@ -74,3 +74,9 @@
         transform: scale(1);
     }
 }
+
+@media (min-width: 2000px) {
+    .first-screen__slogan {
+        top: 7.4vw;
+    }
+}
