--- a/src/scss/base/_footer.scss
+++ b/src/scss/base/_footer.scss
@@ -3,14 +3,15 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 8;
     padding: 0;
 
     & .wrapper {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 3vh 30px;
+        padding-top: 3vh;
+        padding-bottom: 3vh;
     }
 }
 
@@ -133,4 +134,18 @@
         width: auto;
         height: 10vw;
     }
-  }
+}
+
+  @media (max-width: 1370px) {
+    .footer__name {
+        font-size: 28px;
+    }
+    .footer__callback, 
+    .footer__email {
+        font-size: 20px;
+    }
+
+    .footer__socials {
+        width: 160px;
+    }
+}
