Add adaptive for header

--- a/src/scss/base/_03_slider.scss
+++ b/src/scss/base/_03_slider.scss
@@ -2,7 +2,7 @@ body {
   background-color: #0A0A0A;
 }
 
-#home-slider {
+.slider {
   height: 100vh;
   width: 100vw;
   position: relative;
@@ -50,6 +50,7 @@ body {
     bottom: 0;
     border-radius: 25px 0 0 0;
     transform: rotate(-180deg);
+    opacity: 0;
   }
 
   & .swiper-button-prev {
@@ -63,5 +64,25 @@ body {
 
   & .swiper-slide {
     background-color: #0A0A0A;
+  }
+}
+
+//Animation 
+.loaded {
+  & .slider .swiper-button-next {
+    opacity: 0.5;
+
+    &:hover,
+    &:focus,
+    &.active {
+      opacity: 1;
+    }
+  }
+}
+
+@media (max-width: $mobile-width), (orientation: portrait) {
+  .slider .swiper-button-next,
+  .slider .swiper-button-prev {
+    display: none;
   }
 }
