--- a/src/scss/base/_02_variables.scss
+++ b/src/scss/base/_02_variables.scss
@@ -6,7 +6,7 @@ $accent-font: 'Andika-Regular', serif;
 $prime-color: #FBAD03;
 $text-color: #FFFAFA;
 $accent-color: #DC143C;
-$mobile-width: 786px;
+$mobile-width: 1024px;
 
 //Дефолтные стили
 
@@ -14,6 +14,7 @@ body {
   font-family: $regular-font;
   color: $text-color;
   line-height: 1.3;
+  font-size: 3vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -78,7 +79,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 @media (min-width: 2000px) {
   body {
-    font-size: 1vw;
+    font-size: 1.2vw;
   }
   .wrapper {
     max-width: 80%;
@@ -89,5 +90,15 @@ input[type=number]::-webkit-outer-spin-button {
 @media (max-width: 1370px) {
   .wrapper {
     padding: 120px 30px 0 5.2vw;
+  }
+}
+
+@media (max-width: $mobile-width), (orientation: portrait) {
+  body {
+    font-size: 16px;
+  }
+  .wrapper {
+    max-width: 100%;
+    padding: 60px 24px 0;
   }
 }
