--- a/src/scss/base/_first-screen.scss
+++ b/src/scss/base/_first-screen.scss
@@ -13,9 +13,6 @@
         font-size: 1.6vw;
         padding: 1.4vw 3vw 1.3vw;
         margin: 5vh 0 0 8vw;
-        opacity: 0;
-        transform: scale(0);
-        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 3s;
     }
 }
 
@@ -44,7 +41,7 @@
     position: absolute;
     top: 150px;
     left: 23vw;
-    width: 14vw;
+    width: 16vw;
     font-size: 1.4vw;
     font-family: $title-font;
     padding-left: 28px;
@@ -56,7 +53,7 @@
 }
 
 //Animation
-.first-screen.swiper-slide-active {
+.loaded {
     & .first-screen__title .top,
     & .first-screen__title .bottom {
         opacity: 1;
@@ -67,11 +64,6 @@
     & .first-screen__slogan {
         opacity: 1;
         transform: translateY(0);
-    }
-
-    & .header__button {
-        opacity: 1;
-        transform: scale(1);
     }
 }
 
