--- a/src/scss/base/_footer.scss
+++ b/src/scss/base/_footer.scss
@@ -34,6 +34,9 @@
 }
 
 .footer__socials-item {
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12);
 
     & svg {
         width: 40px;
@@ -77,6 +80,12 @@
     border-radius: 50%;
 }
 
+.footer__callback {
+    transform: translateX(100%);
+    opacity: 0;
+    transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12);
+}
+
 @keyframes pulse {
     0% {
       transform: scale(1) rotate(0);
@@ -107,6 +116,32 @@
         flex-direction: column;
         width: auto;
         height: 220px;
+    }
+}
+
+//Animation
+.loaded {
+    & .footer__socials-item {
+        transform: translateY(0);
+        opacity: 1;
+
+        &:nth-of-type(1) {
+            transition-delay: 2s;
+        }
+
+        &:nth-of-type(2) {
+            transition-delay: 2.5s;
+        }
+
+        &:nth-of-type(3) {
+            transition-delay: 3s;
+        }
+    }
+
+    & .footer__callback {
+        transform: translateX(0);
+        opacity: 1;
+        transition-delay: 3s;
     }
 }
 
