Adaptive of first screen

--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -25,6 +25,17 @@
                     <a href="" class="main-nav__link">КОНТАКТЫ</a>
                 </li>
             </ul>
+            <ul class="header__socials">
+                <li class="footer__socials-item"><a href="https://vk.com/fadeevaevent" target="_blank">
+                    <svg><use xlink:href="img/sprite.svg#sprite--icon-vk"></use></svg>
+                </a></li>
+                <li class="footer__socials-item"><a href="https://ok.ru/olgafadeeva.art" target="_blank">
+                    <svg><use xlink:href="img/sprite.svg#sprite--icon-odnoklassniki"></use></svg>
+                </a></li>
+                <li class="footer__socials-item"><a href="https://www.instagram.com/fadeeva_event" target="_blank">
+                    <svg><use xlink:href="img/sprite.svg#sprite--icon-instagram"></use></svg>
+                </a></li>
+            </ul>
             <button type="button" class="header__button button">ЗАКАЗАТЬ ПРАЗДНИК</button>
         </nav>
     </div>
