--- a/src/scss/base/_02_variables.scss
+++ b/src/scss/base/_02_variables.scss
@@ -99,6 +99,6 @@ input[type=number]::-webkit-outer-spin-button {
   }
   .wrapper {
     max-width: 100%;
-    padding: 60px 24px 0;
+    padding: 90px 24px 24px;
   }
 }
