--- a/src/scss/base/_fifth-screen.scss
+++ b/src/scss/base/_fifth-screen.scss
@@ -153,3 +153,11 @@
         font-size: 1.8vw;
     }
   }
+
+  @media (max-width: $mobile-width), (orientation: portrait) {
+    .review {
+        width: 700px;
+        height: 700px;
+        margin-top: 0;
+    }
+  }
