--- a/src/scss/base/_third-screen.scss
+++ b/src/scss/base/_third-screen.scss
@@ -10,6 +10,9 @@
     text-align: center;
     font-size: 4vw;
     margin: 5vh 0;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: 2s cubic-bezier(0.1, 0.39, 0, 1.12) 0s;
 }
 
 .third-screen__list {
@@ -26,6 +29,8 @@
     padding: 0 2vw 5vh 6vw;
     font-size: 1.8vh;
     position: relative;
+    transform: translateY(-100%);
+    opacity: 0;
 
     &::before {
         font-size: 10vw;
@@ -37,17 +42,33 @@
         color: $prime-color;
     }
 
+    &:nth-of-type(1) {
+        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 1s;
+    }
+
     &:nth-of-type(1)::before {
         content: '1';
         left: 1.8vw;
+    }
+
+    &:nth-of-type(2) {
+        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 1.3s;
     }
 
     &:nth-of-type(2)::before {
         content: '2';
     }
 
+    &:nth-of-type(3) {
+        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 1.6s;
+    }
+
     &:nth-of-type(3)::before {
         content: '3';
+    }
+
+    &:nth-of-type(4) {
+        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 1.9s;
     }
 
     &:nth-of-type(4)::before {
@@ -58,6 +79,10 @@
         text-transform: uppercase;
         margin-bottom: 2vh;
         font-size: 3vh;
+    }
+
+    &:nth-of-type(5) {
+        transition: 1s cubic-bezier(0.1, 0.39, 0, 1.12) 2.2s;
     }
 
     &.accent {
@@ -75,8 +100,87 @@
     }
 }
 
+//Animation
+
+.swiper-slide-active.third-screen {
+    .third-screen__title {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    .third-screen__item {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 @media (max-width: 1370px) {
     .third-screen  {
       background-image: none;
+    }
+}
+
+@media (max-width: $mobile-width), (orientation: portrait) {
+    .third-screen__title {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    .third-screen__item {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@media (max-width: 768px) {
+    .third-screen__title {
+        font-size: 22px;
+        margin: 0 0 7vh;
+    }
+
+    .third-screen__list {
+        justify-content: space-evenly;
+    }
+
+    .third-screen__item {
+        width: 50%;
+        min-width: 300px;
+        max-width: 100%;
+        text-align: center;
+        padding: 0;
+        margin-bottom: 6vh;
+        font-size: 16px;
+
+        & .title {
+            font-size: 18px;
+        }
+
+        &::before {
+            font-size: 250px;
+            color: rgba(251, 173, 3, 0.3);
+            top: -70px;
+        }
+
+        &.accent {
+            width: 50%;
+
+            &::before {
+                font-size: 250px;
+                color: rgba(251, 173, 3, 0.3);
+                top: -30px;
+                left: 0;
+                font-size: 80px;
+                font-family: $title-font;
+            }
+        }
+
+        &.accent .title {
+            font-size: 80px;
+            color: rgba(251, 173, 3, 0.3);
+            position: absolute;
+            top: -30px;
+            left: 30px;
+            font-family: $title-font;
+        }
     }
 }
