Fix mobile menu

--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="wrapper">
         <nav class="main-nav">
-            <a href="" class="main-nav__link">
+            <a href="#" class="main-nav__link">
                 <img src="img/logo.png" alt="Ольга Фадеева" class="header__logo" width="300" height="57">
             </a>
             <div class="header__mobile-menu">
@@ -10,19 +10,19 @@
             </div>
             <ul class="main-nav__menu">
                 <li>
-                    <a href="" class="main-nav__link">ОБО МНЕ </a>
+                    <a href="#about" class="main-nav__link">ОБО МНЕ </a>
                 </li>
                 <li>
-                    <a href="" class="main-nav__link">КАК РАБОТАЮ</a>
+                    <a href="#work" class="main-nav__link">КАК РАБОТАЮ</a>
                 </li>
                 <li>
-                    <a href="" class="main-nav__link">ЦЕНЫ </a>
+                    <a href="#price" class="main-nav__link">ЦЕНЫ </a>
                 </li>
                 <li>
-                    <a href="" class="main-nav__link">ОТЗЫВЫ</a>
+                    <a href="#reviews" class="main-nav__link">ОТЗЫВЫ</a>
                 </li>
                 <li>
-                    <a href="" class="main-nav__link">КОНТАКТЫ</a>
+                    <a href="#contacts" class="main-nav__link">КОНТАКТЫ</a>
                 </li>
             </ul>
             <ul class="header__socials">
@@ -36,7 +36,7 @@
                     <svg><use xlink:href="img/sprite.svg#sprite--icon-instagram"></use></svg>
                 </a></li>
             </ul>
-            <button type="button" class="header__button button">ЗАКАЗАТЬ ПРАЗДНИК</button>
+            <a href="#contacts" class="header__button button">ЗАКАЗАТЬ ПРАЗДНИК</a>
         </nav>
     </div>
 </header>
