--- a/src/scss/base/_03_slider.scss
+++ b/src/scss/base/_03_slider.scss
@@ -88,7 +88,7 @@ body {
 
   .slider {
     height: 100%;
-    width: 100vw;
+    width: 100%;
   
     & > .swiper-container > .swiper-wrapper {
       height: 100%;
