--- a/src/scss/base/_sixth.scss
+++ b/src/scss/base/_sixth.scss
@@ -147,8 +147,8 @@ textarea.six-screen__form-input {
 }
 
 @media (max-width: $mobile-width), (orientation: portrait) {
-    .six-screen {
-        padding-bottom: 100px;
+    .six-screen .wrapper {
+        height: auto;
     }
     .six-screen__title {
         transform: translateX(0);
@@ -168,7 +168,6 @@ textarea.six-screen__form-input {
 
 @media (max-width: 765px) {
     .six-screen {
-        padding-bottom: 130px;
         background-position: right center;
     }
     .six-screen__title {
@@ -185,9 +184,6 @@ textarea.six-screen__form-input {
 }
 
 @media (max-width: 550px) {
-    .six-screen {
-        padding-bottom: 180px;
-    }
     .six-screen__form-item {
         flex-basis: 100%;
     }
